<?xml version="1.0" encoding="UTF-8"?>
<project>
    <modelVersion>4.0.0</modelVersion>

    <name>Slides gwtquery project</name>
    <groupId>org.gquery</groupId>
    <artifactId>slides</artifactId>
    <packaging>war</packaging>
    <version>1.0-SNAPSHOT</version>

    <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>1.6</maven.compiler.source>
      <maven.compiler.target>1.6</maven.compiler.target>
      <gQueryVersion>1.4.0-SNAPSHOT</gQueryVersion>
      <gwtversion>2.5.1</gwtversion>
      <gwtmaven>2.5.1</gwtmaven>
        <gwt.style>PRETTY</gwt.style>
    </properties>

    <repositories>
       <repository>
         <id>central</id>
         <url>http://repo1.maven.org/maven2</url>
       </repository>
       <repository>
         <id>gwtquery-plugins</id>
         <url>http://gwtquery-plugins.googlecode.com/svn/mavenrepo</url>
       </repository>
       <repository>
         <id>sonatype</id>
         <url>http://oss.sonatype.org/content/repositories/snapshots</url>
         <snapshots><enabled>true</enabled></snapshots>
         <releases><enabled>false</enabled></releases>
       </repository>
       <repository>
         <id>m.g.o</id>
         <url>http://maven.glassfish.org/content/groups/public/</url>
       </repository>
    </repositories>

    <scm>
    </scm>

    <issueManagement>
    </issueManagement>

    <profiles>
     <profile>
        <id>prod</id>
        <properties>
          <gwt.compiler.compileReport>false</gwt.compiler.compileReport>
          <gwt.draftCompile>false</gwt.draftCompile>
          <gwt.enableClosureCompiler>true</gwt.enableClosureCompiler>
          <gwt.compiler.optimizationLevel>9</gwt.compiler.optimizationLevel>
          <gwt.disableClassMetadata>true</gwt.disableClassMetadata>
          <gwt.disableCastChecking>true</gwt.disableCastChecking>
          <gwt.disableRunAsync>true</gwt.disableRunAsync>
          <gwt.enableAssertions>false</gwt.enableAssertions>
          <gwt.loglevel>INFO</gwt.loglevel>
        </properties>
     </profile>
    </profiles>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-user</artifactId>
            <version>${gwtversion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-dev</artifactId>
            <version>${gwtversion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.gwt</groupId>
            <artifactId>gwt-servlet</artifactId>
            <version>${gwtversion}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.gwtquery</groupId>
            <artifactId>gwtquery</artifactId>
            <version>${gQueryVersion}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.timepedia.exporter</groupId>
            <artifactId>gwtexporter</artifactId>
            <version>2.5.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- GWT 2.3.0 depends on these -->
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
            <version>1.0.0.GA</version>
            <classifier>sources</classifier>
        </dependency>

        <dependency>
            <groupId>com.google.code.javaparser</groupId>
            <artifactId>javaparser</artifactId>
            <version>1.0.9</version>
        </dependency>
        <dependency>
            <groupId>com.github.jdramaix</groupId>
            <artifactId>gwtchosen</artifactId>
            <version>1.2.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>gwt-maven-plugin</artifactId>
              <version>${gwtmaven}</version>
              <configuration>
                  <style>${gwt.style}</style>
                  <logLevel>${gwt.loglevel}</logLevel>
                  <runTarget>tw/index.html</runTarget>
                  <compileReport>${gwt.compiler.compileReport}</compileReport>
                  <compilerMetrics>${gwt.compiler.compileReport}</compilerMetrics>
                  <draftCompile>${gwt.draftCompile}</draftCompile>
                  <enableClosureCompiler>${gwt.enableClosureCompiler}</enableClosureCompiler>
                  <disableRunAsync>${gwt.disableRunAsync}</disableRunAsync>
                  <localWorkers>3</localWorkers>
                  <fragmentCount>20</fragmentCount>
                  <bindAddress>0.0.0.0</bindAddress>
                  <codeServerWorkDir>${project.build.directory}</codeServerWorkDir>
                  <disableClassMetadata>${gwt.disableClassMetadata}</disableClassMetadata>
                  <disableCastChecking>${gwt.disableCastChecking}</disableCastChecking>
                  <extraJvmArgs>-Xmx2048m -XX:MaxPermSize=384m </extraJvmArgs>
                  <gen>${project.build.directory}/gen</gen>
                  <hostedWebapp>${project.build.directory}/${project.build.finalName}</hostedWebapp>
                  <modules>
                    <module>org.gquery.slides.GwtCreate</module>
                  </modules>
              </configuration>
              <executions>
                  <execution>
                      <phase>prepare-package</phase>
                      <goals>
                          <goal>compile</goal>
                      </goals>
                  </execution>
              </executions>
            </plugin>

            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>2.1</version>
              <configuration>
                <source>1.6</source>
                <target>1.6</target>
              </configuration>
            </plugin>
            <plugin>
               <artifactId>maven-surefire-plugin</artifactId>
               <version>2.8.1</version>
               <configuration>
                 <additionalClasspathElements>
                   <additionalClasspathElement>\${project.build.sourceDirectory}</additionalClasspathElement>
                   <additionalClasspathElement>\${project.build.testSourceDirectory}</additionalClasspathElement>
                 </additionalClasspathElements>
                 <useManifestOnlyJar>false</useManifestOnlyJar>
                 <forkMode>always</forkMode>
                 <systemProperties>
                   <property>
                     <name>gwt.args</name>
                     <value>-out target/gwt-tests</value>
                   </property>
                   <property>
                     <!-- Setting this to true (default) causes a exception first time test are run Gwt issue_6443 -->
                     <name>gwt.persistentunitcache</name>
                     <value>false</value>
                   </property>
                 </systemProperties>
               </configuration>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-eclipse-plugin</artifactId>
              <version>2.7</version>
              <configuration>
                 <downloadSources>true</downloadSources>
                 <downloadJavadocs>false</downloadJavadocs>
                 <additionalBuildcommands>
                   <buildcommand>com.google.gwt.eclipse.core.gwtProjectValidator</buildcommand>
                   <buildcommand>org.eclipse.wst.common.modulecore.ComponentStructuralBuilder</buildcommand>
                   <buildcommand>org.eclipse.jdt.core.javabuilder</buildcommand>
                   <buildcommand>org.eclipse.wst.common.modulecore.ComponentStructuralBuilderDependencyResolver</buildcommand>
                 </additionalBuildcommands>
                 <additionalProjectnatures>
                   <projectnature>com.google.gwt.eclipse.core.gwtNature</projectnature>
                   <projectnature>org.eclipse.jdt.core.javanature</projectnature>
                   <projectnature>org.eclipse.wst.common.modulecore.ModuleCoreNature</projectnature>
                 </additionalProjectnatures>
                 <classpathContainers>
                   <classpathContainer>com.google.gwt.eclipse.core.GWT_CONTAINER</classpathContainer>
                   <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER</classpathContainer>
                   <classpathContainer>org.eclipse.jdt.junit.JUNIT_CONTAINER/3</classpathContainer>
                </classpathContainers>
              </configuration>
            </plugin>
            <!-- GWT plugin does not copy the webapp folder in hosted mode -->
            <plugin>
              <artifactId>maven-resources-plugin</artifactId>
              <version>2.5</version>
              <executions>
                <execution>
                  <id>copy-resources</id>
                  <phase>generate-sources</phase>
                  <goals>
                    <goal>copy-resources</goal>
                  </goals>
                  <configuration>
                    <outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
                    <resources>
                      <resource>
                       <directory>src/main/webapp</directory>
                       <filtering>true</filtering>
                      </resource>
                    </resources>
                  </configuration>
                </execution>
              </executions>
            </plugin>
        </plugins>
        <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
    </build>
</project>
